New Image Countries feature

--- a/sites/all/themes/omega_image/css/global.css
+++ b/sites/all/themes/omega_image/css/global.css
@@ -1068,12 +1068,42 @@ h2.block-title {
   padding: 0;
 }
 
-/*
-ul.menu		{	padding: 2em 0;
-				z-index: 200;
-			}
-*/
-/* line 770, ../sass/global.scss */
+/* line 767, ../sass/global.scss */
+#block-views-country-terms-block .views-field-field-country .field-content,
+#block-views-country-terms-block .views-field-field-country .country-title {
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-size: 3em;
+  padding-bottom: .2em;
+  margin-bottom: 1em;
+  text-transform: capitalize;
+}
+
+/* line 777, ../sass/global.scss */
+#block-views-country-terms-block-1 .views-row {
+  clear: both;
+  margin-bottom: 1em;
+  height: 120px;
+  border: 1px solid #cccccc;
+  padding: 1em;
+}
+/* line 785, ../sass/global.scss */
+#block-views-country-terms-block-1 .views-field-name a {
+  color: #222;
+  text-decoration: none;
+}
+/* line 788, ../sass/global.scss */
+#block-views-country-terms-block-1 .views-field-name a:hover {
+  text-decoration: underline;
+}
+/* line 793, ../sass/global.scss */
+#block-views-country-terms-block-1 .views-field-field-logo img {
+  border: 1px solid #dddddd;
+  margin: 0 10px 10px 0;
+  float: left;
+}
+
+/* line 799, ../sass/global.scss */
 ul#superfish-1 {
   position: absolute;
   top: -35px;
@@ -1083,7 +1113,7 @@ ul#superfish-1 {
   background-image: -o-linear-gradient(top, #555555, #cccccc);
   background-image: linear-gradient(top, #555555, #cccccc);
 }
-/* line 777, ../sass/global.scss */
+/* line 806, ../sass/global.scss */
 ul#superfish-1 li {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #1e2336), color-stop(100%, #555555));
   background-image: -webkit-linear-gradient(top, #1e2336, #555555);
@@ -1092,7 +1122,7 @@ ul#superfish-1 li {
   background-image: linear-gradient(top, #1e2336, #555555);
   margin-left: 1px;
 }
-/* line 780, ../sass/global.scss */
+/* line 809, ../sass/global.scss */
 ul#superfish-1 li a {
   color: #fff;
   padding: 12px 30px;
@@ -1101,7 +1131,7 @@ ul#superfish-1 li a {
   font-size: .9em;
   color: #eee;
 }
-/* line 787, ../sass/global.scss */
+/* line 816, ../sass/global.scss */
 ul#superfish-1 li a:hover {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #222222), color-stop(100%, #1e2336));
   background-image: -webkit-linear-gradient(top, #222222, #1e2336);
@@ -1110,7 +1140,7 @@ ul#superfish-1 li a:hover {
   background-image: linear-gradient(top, #222222, #1e2336);
   color: #eee;
 }
-/* line 792, ../sass/global.scss */
+/* line 821, ../sass/global.scss */
 ul#superfish-1 li a.active {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #555555), color-stop(100%, #1e2336));
   background-image: -webkit-linear-gradient(top, #555555, #1e2336);
@@ -1119,32 +1149,32 @@ ul#superfish-1 li a.active {
   background-image: linear-gradient(top, #555555, #1e2336);
   color: #fff;
 }
-/* line 796, ../sass/global.scss */
+/* line 825, ../sass/global.scss */
 ul#superfish-1 li .last a {
   border: none;
 }
-/* line 801, ../sass/global.scss */
+/* line 830, ../sass/global.scss */
 ul#superfish-1 li.sf-item-1 {
   margin-left: 0;
 }
-/* line 802, ../sass/global.scss */
+/* line 831, ../sass/global.scss */
 ul#superfish-1 li.sf-item-1 a {
   border-left: none;
 }
 
-/* line 807, ../sass/global.scss */
+/* line 836, ../sass/global.scss */
 ul.superfish-2 .sf-vertical, ul.superfish-2 .sf-vertical li {
   width: 30em;
 }
 
-/* line 815, ../sass/global.scss */
+/* line 844, ../sass/global.scss */
 ul#superfish-5 li a {
   color: #eee;
   padding: 14px 30px;
   text-decoration: none;
   border-left: 1px solid #888888;
 }
-/* line 821, ../sass/global.scss */
+/* line 850, ../sass/global.scss */
 ul#superfish-5 li a:hover,
 ul#superfish-5 li a.active {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(20%, #bbbbbb), color-stop(70%, #cccccc), color-stop(100%, #dddddd));
